--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,59 @@ form {
 .navbar-brand span {
     font-size: 1.5rem; /* Adjust font size as needed */
 }
+
+
+
+
+
+/* info.html */
+
+.carousel-item img {
+    height: 400px; /* Adjust the height as needed */
+    object-fit: cover; /* Ensures images cover the container while maintaining aspect ratio */
+}
+.tab-content {
+    display: none; /* Hide all tab contents by default */
+}
+.tab-content.active {
+    display: block; /* Show the active tab content */
+}
+.single-team .inner {
+    text-align: center;
+    margin-bottom: 35px;
+    border: 1px solid #e5eaf0;
+    padding: 5px 5px 0px;
+}
+.single-team .inner .team-img {
+    position: relative;
+}
+.single-team .inner .team-img img {
+    width: 100%;
+}
+.single-team .inner .team-content {
+    padding: 22px 0px 0px;
+}
+.single-team .inner .team-content h4 {
+    font-size: 18px;
+    font-weight: 400;
+}
+.single-team .inner .team-content h5 {
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing: 0.5px;
+    color: #7d91aa;
+}
+.single-team .inner .team-content a {
+    display: inline-block;
+    padding: 2px;
+    margin: 0 3px;
+    font-size: 16px;
+}
+.team-social {
+    background: #f3f6fa;
+    width: 50%;
+    padding-top: 4px;
+    margin: auto;
+    border-radius: 15px 15px 0px 0px;
+    margin-top: 17px;
+}
